fix z-index

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,7 +6,14 @@
     font-style: normal;
     font-display: swap;
 }
-
+@font-face {
+    font-family: 'Sora-Regular';
+    src: url('../assets/fonts/Sora/Sora-Regular.woff2') format('woff2'),
+        url('../assets/fonts/Sora/Sora-Regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
 @font-face {
     font-family: 'Sora-SemiBold';
     src: url('../assets/fonts/Sora/Sora-SemiBold.woff2') format('woff2'),
@@ -15,7 +22,6 @@
     font-style: normal;
     font-display: swap;
 }
-
 @font-face {
     font-family: 'DM-Mono-Regular';
     src: url('../assets/fonts/Dm-mono/DMMono-Regular.woff2') format('woff2'),
